# fin

./: .gitignore  backtestDaily.py  backtestToCSV.py  backtester.doc.py  backtester1.0.py  backtesterBeta.py  backtesterWorking.py  genAdjClosePrices.py  logtest.py  main.py  microsoft.py  momentum.py  momentumDaily.py  pandaCode.py  papaBearDaily.py  portfolioAdj.py  portfolioNorm.py  pull.py  pullman.py  pyproject.toml  rebalance.py  scratch.py  yfcache.py
backtest/configs/: gemini20.py  grok19.py  merriPapa.py  merriman4.1.py  papaFriday.py  papaOrig.py  papaPort.py  papaRamsey.py  ramseyPicks.py  raysAssets.py  spy.py  template.py
backtest/configs/momEtfs/: robbins.py
backtest/src/: momda.py  momentum.py  papaBuckets.py  papaLean.py  papaSrc.py
cache/: testcache.py
eodcode/: pandaCsv.py  tickerToCSV.py
eodhd/: tickerToCSV.py
