[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fin"
version = "0.1.0"
description = "Financial backtesting and caching library"
dependencies = [
    "pandas", "yfinance", "duckdb", "numpy", "matplotlib"
]

[tool.setuptools]
# Only recognize yfcache.py and the specific backtest source directory
py-modules = ["yfcache"]
packages = ["backtest", "backtest.src"]

